One line to fix the extra space around form elements

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -114,6 +114,12 @@ td.button {
   width: 1em;
 }
 
+td.button form{
+	display: inline;
+}
+
+
+
 tr.main {
   cursor: pointer;
 }
